--- a/.travis.yml
+++ b/.travis.yml
@@ -7,8 +7,8 @@ python:
   - "pypy"
 
 install:
-  - if [[ $TRAVIS_PYTHON_VERSION == 2* ]]; then pip install -r dev-requirements.txt; fi
-  - if [[ $TRAVIS_PYTHON_VERSION == 'pypy' ]]; then pip install -r dev-requirements.txt; fi
-  - if [[ $TRAVIS_PYTHON_VERSION == 3* ]]; then pip install -r dev-requirements-py3.txt; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == 2* ]]; then travis_retry pip install -r dev-requirements.txt; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == 3* ]]; then travis_retry pip install -r dev-requirements-py3.txt; fi
+  - if [[ $TRAVIS_PYTHON_VERSION == 'pypy' ]]; then travis_retry pip install -r dev-requirements.txt; fi
 
 script: make test
