--- a/setup.cfg
+++ b/setup.cfg
@@ -4,7 +4,7 @@ rednose=1
 exe=1
 cover-package=reppy
 cover-branches=1
-#cover-min-percentage=100
+cover-min-percentage=100
 cover-inclusive=1
 cover-erase=1
 logging-clear-handlers=1
