Allow failure in Python 3.7-dev
Addresses instability in an emerging Python version while still
providing insight.

--- a/.travis.yml
+++ b/.travis.yml
@@ -9,6 +9,10 @@ python:
   - "3.6"
   - "3.7-dev"
 
+matrix:
+  allow_failures:
+    - "3.7-dev"
+
 install: pip install -r dev-requirements.txt
 
 script: make test
