Add new py3 version to CI (#77)
* Add new py3 version to CI

I noticed when submitting a PR for another project to add support
for respecting robots.txt files that reppy was not building under
python 3.7-dev and nightly builds.

To ensure proper visibility for coming versions, I am proposing
additional versions for the testing matrix.

* Allow failure in Python 3.7-dev

Addresses instability in an emerging Python version while still
providing insight.

* Correcting allowed failures syntax for travis ci

--- a/.travis.yml
+++ b/.travis.yml
@@ -6,6 +6,12 @@ python:
   - "3.3"
   - "3.4"
   - "3.5"
+  - "3.6"
+  - "3.7-dev"
+
+matrix:
+  allow_failures:
+    - python: "3.7-dev"
 
 install: pip install -r dev-requirements.txt
 
