--- a/tox.ini
+++ b/tox.ini
@@ -1,15 +1,6 @@
 [tox]
-envlist=py27,py33,py34,pypy
+envlist=py27,py33,py34,py35
 
-[testenv:py27]
-deps=
-    -rdev-requirements.txt
-commands=
-    nose
-
-[testenv:py33,py34,pypy]
-deps=
-    -rdev-requirements.txt
-commands=
-    nose
-
+[testenv]
+deps= -rdev-requirements.txt
+commands=nosetests []
