--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,10 @@ cachetools==3.0.0
 requests==2.10.0
 six==1.10.0
 python-dateutil==2.5.3
+Cython==0.29.14
+mock==4.0.1
+requests_mock==1.7.0
+nose==1.3.7
+colorama==0.4.3
+python-termstyle==0.1.10
+rednose==1.2.1
